--- a/ba-web-app/package.json
+++ b/ba-web-app/package.json
@@ -24,7 +24,7 @@
     "@types/gapi": "0.0.36",
     "@types/gapi.auth2": "0.0.47",
     "angular5-social-login": "^1.0.9",
-    "aws-amplify": "^1.0.8",
+    "aws-amplify": "^1.1.22",
     "aws-sdk": "^2.305.0",
     "core-js": "^2.5.7",
     "jquery": "^3.3.1",
@@ -34,26 +34,26 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.5",
+    "@angular-devkit/build-angular": "^0.13.5",
     "@angular/cli": "~6.1.5",
-    "@angular/compiler-cli": "^6.0.3",
+    "@angular/compiler-cli": "^7.2.8",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.9.3",
     "@types/jquery": "^3.3.1",
+    "@types/node": "~10.9.3",
     "@types/paho-mqtt": "^1.0.3",
     "codelyzer": "~4.4.4",
     "jasmine-core": "~3.2.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^1.3.1",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.2",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
-    "typescript": "^2.9.2"
+    "typescript": "^3.1.1"
   }
 }
