--- a/ba-lambda-handlers/pom.xml
+++ b/ba-lambda-handlers/pom.xml
@@ -33,6 +33,13 @@
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.stripe/stripe-java -->
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>8.1.0</version>
+        </dependency>
+
 
     </dependencies>
 
