Using ViewChildren to access DOM directly

--- a/ba-web-app/package.json
+++ b/ba-web-app/package.json
@@ -28,6 +28,7 @@
     "aws-sdk": "^2.305.0",
     "axios": "^0.18.0",
     "core-js": "^2.5.7",
+    "eslint": "^5.15.3",
     "jquery": "^3.3.1",
     "jquery.easing": "^1.4.1",
     "npm": "^6.2.0",
