--- a/ba-lambda-handlers/pom.xml
+++ b/ba-lambda-handlers/pom.xml
@@ -40,6 +40,14 @@
             <version>8.1.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-cloudfront -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-cloudfront</artifactId>
+            <version>1.9.3</version>
+        </dependency>
+
+
 
     </dependencies>
 
